// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiMark is rendered 1`] = `
<mark
  aria-label="aria-label"
  class="euiMark testClass1 testClass2 css-b9vly9-euiMarkStyles-EuiMark"
  data-test-subj="test subject string"
>
  Marked
</mark>
`;

exports[`EuiMark is rendered: renders with emotion styles 1`] = `
.css-b9vly9-euiMarkStyles-EuiMark {
  background-color: rgba(0,119,204,0.1);
  font-weight: 700;
  color: #343741;
}

.css-b9vly9-euiMarkStyles-EuiMark:before,
.css-b9vly9-euiMarkStyles-EuiMark:after {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.css-b9vly9-euiMarkStyles-EuiMark:before {
  content: ' [highlight start] ';
}

.css-b9vly9-euiMarkStyles-EuiMark:after {
  content: ' [highlight end] ';
}

<mark
  class="euiMark css-b9vly9-euiMarkStyles-EuiMark"
>
  Marked
</mark>
`;

exports[`No screen reader helper text is rendered without CSS :before and :after text 1`] = `
.css-dtzpxu-euiMarkStyles-EuiMark {
  background-color: rgba(0,119,204,0.1);
  font-weight: 700;
  color: #343741;
}

<mark
  aria-label="aria-label"
  class="euiMark testClass1 testClass2 css-dtzpxu-euiMarkStyles-EuiMark"
  data-test-subj="test subject string"
>
  Marked
</mark>
`;
